--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
+    "angular2-qrcode": "^2.0.3",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "core-js": "^2.5.4",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
