--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@schematics/angular": "^9.1.0",
     "@techiediaries/ngx-qrcode": "^9.1.0",
+    "angular2-notifications": "^12.0.0",
     "angular2-qrcode": "^2.0.3",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
