--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "angular2-notifications": "^12.0.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "jspdf": "^2.4.0",
+    "primeng": "^13.0.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
