--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^10.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
